--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
@@ -23,5 +22,6 @@
   "devDependencies": {
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.4.1"
-  }
+  },
+  "description": ""
 }
